--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^24.5.2",
-    "tailwindcss": "^4"
+    "@types/react": "^19.1.13",
+    "tailwindcss": "^4",
+    "typescript": "^5.9.2"
   }
 }
