--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "google-auth-library": "^10.3.0",
+    "google-spreadsheet": "^5.0.2",
     "mercadopago": "^2.9.0",
     "next": "15.5.4",
     "react": "19.1.0",
